--- a/localisation/spanish/statistics_l_spanish.yml
+++ b/localisation/spanish/statistics_l_spanish.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_spanish:
 
 edict_phi_dump_stats: "Dump Statistics"
 edict_phi_dump_stats_desc: "Dump empire stats on /Stellaris/logs/game.log"
